feat: connect mobile to itinerary API
